Fix AXObject::GetRelativeBounds for root-layer-scrolls

This method computes the object's bounds within its container. If the
container is scrollable the method adjust the local bounds by the scroll
offset. LayoutView is/was exceptional because it doesn't itself scroll;
thus, objects contained by the LayoutView mustn't adjust by the scroll
offset. However, LayoutView does report itself as scrollable and returns
a ScrollableArea (the FrameView, which is used for scrolling) so there
exists an exception in this code to avoid the scroll offset adjustment.

root-layer-scrolling removes the exception in how LayoutView works and
uses the regular PaintLayerScrollableArea machinery to scroll frames.
This means objects whose container is LayoutView need to be adjusted by
the scroll offset to be relative to their container. This CL removes the
exceptional case if the RLS flag is enabled.

Bug: 800542
Change-Id: I16ecc5789ae93fed107d2bbf5776b2fbd5358793
Reviewed-on: https://chromium-review.googlesource.com/869170
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529801}
Former-commit-id: 98f17c6ef1426ccf152ba1f474b295b969a1e4c8